Use Map.of() in ProPresenterParser constructor (#471)